--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "axios": "^0.20.0",
     "concurrently": "^5.3.0",
+    "cookie-parser": "^1.4.5",
+    "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.10.5",
