--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "build": "cd client && npm run build",
+    "heroku-install": "npm install && cd client && npm install",
+    "heroku-postbuild": "npm run heroku-install && npm run build"
   },
   "repository": {
     "type": "git",
@@ -23,6 +29,7 @@
     "concurrently": "^5.3.0",
     "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.10.5",
