--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.4.3",
-    "vue-select": "^3.10.8"
+    "vue-select": "^3.10.8",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
