--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "concurrently": "^5.3.0",
     "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
-    "mongoose": "^5.10.5",
+    "mongoose": "^5.10.7",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0"
   }
