--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "googleapis": "^60.0.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.10.7",
     "passport": "^0.4.1",
