--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.17.1",
     "googleapis": "^60.0.1",
     "if-env": "^1.0.4",
+    "luxon": "^1.25.0",
     "mongoose": "^5.10.7",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0"
